Fix broken background image alignment

--- a/src/pages/schedule.module.scss
+++ b/src/pages/schedule.module.scss
@@ -540,6 +540,7 @@
   z-index: -1;
 
   svg {
+    width: 100%;
     height: 50%;
   }
 }
